<resources>
    <string name="app_name">PerintisAdventure</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa password?</string>
    <string name="tidak_punya_akun">Tidak punya akun?</string>
    <string name="buat_akun">Buat Akun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perintis_logo">Perintis Logo</string>
    <string name="ilustration_login">Ilustration login</string>
    <string name="registrasi">Registrasi</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap">Nama lengkap</string>
    <string name="telephone">Telephone</string>
    <string name="konfirmasi_password">Konfirmasi password</string>
    <string name="ilustrasi_registrasi">Ilustrasi Registrasi</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukkan_email_yang_anda_gunakan_pada_akun_anda">Masukkan email yang anda gunakan pada akun anda!</string>
    <string name="reset">Reset</string>
    <string name="ilustrasi_reset_password">Ilustrasi Reset Password</string>
    <string name="berhasil_dikirim">Berhasil Dikirim</string>
    <string name="silahkan_cek_email_untuk_reset_password_anda">Silahkan cek email untuk reset password anda!</string>
    <string name="jelajahi">Jelajahi Sekarang</string>
    <string name="kembali_login">Kembali Login</string>
    <string name="ilustrasi_email_terkirim">Ilustrasi email terkirim</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="registrasi_berhasil">Registrasi Berhasil</string>
    <string name="selamat_registrasi_berhasil_silahkan_login_sekarang">Selamat registrasi berhasil Silahkan login sekarang!</string>
    <string name="pesanan">Pesanan</string>
    <string name="booked">Booked</string>
    <string name="profile">Profile</string>
    <string name="siapkah_kamu_mengawali_petualanganmu">Siapkah kamu mengawali petualanganmu?</string>
    <string name="foto_profil">Foto profil</string>
    <string name="nama">Nama :</string>
    <string name="email_text">Email :</string>
    <string name="edit_profile">Edit profile</string>
    <string name="logout">Logout</string>
    <string name="simpan">Simpan</string>
    <string name="password_baru">Password baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi password baru</string>
    <string name="ganti_password">Ganti password</string>
    <string name="password_lama">Password lama</string>
    <string name="tanggal">Tanggal</string>
    <string name="durasi">Durasi</string>
    <string name="jam_penyewaan">Jam penyewaan</string>
    <string name="sopir">Sopir</string>
    <string name="cari_mobil">Cari Mobil</string>
    <string name="jam">Jam</string>
    <string name="jam_keberangkatan">Jam keberangkatan</string>
    <string name="kapasitas">Kapasitas</string>
    <string name="kendaraan">Kendaraan</string>
    <string name="tentang_wisata">Tentang Wisata</string>
    <string name="disediakan_oleh">Disediakan oleh: </string>
    <string name="pesan_sekarang">Pesan Sekarang</string>
    <string name="syarat_dan_ketentuan_rental">Syarat dan Ketentuan</string>
    <string name="layanan_kami">Layanan kami</string>
    <string name="detail_penjemputan...">Detail penjemputan...</string>
    <string name="detail_penjemputan">Detail penjemputan</string>
    <string name="pilih_area">Pilih area...</string>
    <string name="car_image_detail">Car Image Detail</string>
    <string name="icon_garage">Icon garage</string>
    <string name="information">Informasi:</string>
    <string name="icon_capacity">Icon capacity</string>
    <string name="icon_gear">Icon gear</string>
    <string name="icon_luggage">Icon luggage</string>
    <string name="icon_driver">Icon driver</string>
    <string name="icon_car_year">Icon car year</string>
    <string name="icon_term">Icon term</string>
    <string name="icon_check">Icon check</string>
    <string name="icon_gas">Icon gas</string>
    <string name="icon_clock">Icon clock</string>
    <string name="pelajari_selengkapnya">Pelajari selengkapnya</string>
    <string name="icon_maps">Icon maps</string>
    <string name="maps">Maps</string>
    <string name="syarat_dan_jaminan_rental">Syarat dan jaminan rental</string>
    <string name="pilih_daerah_penjemputan">Pilih daerah penjemputan</string>
    <string name="harga_total">Harga Total</string>
    <string name="tulis_detail_penjemputan">Tulis Detail Penjemputan</string>
    <string name="tempat_lain">Tempat Lain</string>
    <string name="gratis">Gratis</string>
    <string name="kantor_rental">Kantor Rental</string>
    <string name="lokasi_kantor">Lokasi Kantor Perintis Adventure</string>
    <string name="image_proof_payment">Image proof payment</string>
    <string name="home">Home</string>
    <string name="upload_bukti_pembayaran">Upload bukti pembayaran</string>
    <string name="atas_nama">Atas Nama:</string>
    <string name="kode_bank">Kode bank:</string>
    <string name="no_rekening">No Rekening:</string>
    <string name="image_logo_bank">Image logo bank</string>
    <string name="silahkan_transfer_pada_rekening_berikut">Silahkan transfer pada rekening berikut :</string>
    <string name="klik_untuk_upload_gambar">klik untuk pilih gambar...</string>
    <string name="list_booking_icon">List booking icon</string>
    <string name="total_pembayaran">Total pembayaran:</string>
    <string name="diharapkan_transfer_sesuai_total_pembayaran_diatas">Transfer sesuai nominal total pembayaran sampai 3 angka terakhir</string>
    <string name="image_car_detail_booking">Image car detail booking</string>
    <string name="tanggal_pemesanan">Tanggal pemesanan:</string>
    <string name="informasi">Informasi</string>
    <string name="lokasi_pengambilan">Lokasi pengambilan</string>
    <string name="pembayaran_berhasil">Pembayaran Berhasil</string>
    <string name="back">Back</string>
    <string name="perintis_news">Perintis News</string>
    <string name="car_plate">Icon car plate</string>
    <string name="icon_group">Icon group</string>
    <string name="icon_car">Icon car</string>
    <string name="wilayah_kota_malang">Wilayah Kota Malang</string>
    <string name="image_detail_booking_tour">image_detail_booking_tour</string>
    <string name="lokasi_penjemputan">Lokasi penjemputan:</string>
    <string name="img_detail_news">img_detail_news</string>
    <string name="fasilitas">Fasilitas:</string>
    <string name="wisata_yang_dikunjungi">Wisata yang dikunjungi:</string>
    <string name="tour_wisata">Tour wisata</string>
    <string name="ilustrasi_booking_tour">ilustrasi booking tour</string>
    <string name="sewa_mobil">Sewa mobil</string>
    <string name="ilustrasi_booking_mobil">ilustrasi booking mobil</string>
    <string name="pilih_destinasimu">Pilih Destinasimu</string>
    <string name="perum_patraland_place_blok_b2_no_10_tasikmadu_lowokwaru_kota_malang_jawa_timur_65143">Perum. Patraland Place, Blok. B2 No.10, Tasikmadu, Lowokwaru, Kota Malang, Jawa timur 65143</string>
    <string name="perintis_adventure_rent_car_amp_tour_bromo"><![CDATA[Perintis Adventure Rent Car & Tour Bromo]]></string>
    <string name="waktu_wisata">Waktu Wisata:</string>
    <string name="image_profile">image profile</string>
    <string name="image_item_slider">Image item slider</string>
    <string name="pemesanan_penuh_n_silahkan_ganti_tanggal">Pemesanan penuh \n Silahkan ganti tanggal!</string>
    <string name="image_item_news_home">Image item news home</string>
    <string name="icon_to_detail_news">Icon to detail news</string>
    <string name="hai_trippers_lihat_informasi_spesial_buatmu">Hai trippers, lihat informasi spesial buatmu!</string>
    <string name="image_background_list_news">Image background list news</string>
    <string name="by_perintis_adventure">By: Perintis Adventure</string>
    <string name="perorang">/ Orang</string>
    <string name="paket">Paket</string>
    <string name="orang">Orang</string>

    <string name="one">Penyewa wajib memiliki dan membawa SIM A selama mengemudi.</string>
    <string name="two">Penyewa wajib mengembalikan kendaraan dalam maktu dan Tempat yang telah disepakati.</string>
    <string name="three">Penyewa wajib menjaga kondisi mobil dengan baik seperti sedia kala. Tidak menambahkan aksesoris/merubah tiap Komponen mobil Tanja seizin Perintis adventure.</string>
    <string name="four">Penyewa wajib memperhatikan barang bawaan yang Beraroma menyengat.</string>
    <string name="five">Penyewa wajib mematuhi peraturan lalu lintas berlaku.</string>
    <string name="six">Penyewa dilarang merusak/menghilangkan fasilitas tambahan yang disediakan oleh Perintis Adventure. (Kabel USB/AUX, kotak permen, kotak tissue, bantal dsb).</string>
    <string name="seven">Penyewa wajib mengisi bahan bakar kendaraan minimal ber-Oktal 90 Pertalite (untuk kendaraian Gasoline) serta minimal Dexlite (untuk kendaraian Diesel).</string>
    <string name="eight">Penyewa dilarang keras penumpang/barang melebihi kapasitas kendaraan.</string>
    <string name="nine">Penyewa dilarang keras membawa/menginggalkan barang Yang mudah meledak serta barang yang dilarang oleh undang - undang Republik Indonesia didalam kendaraan.</string>
    <string name="ten">Segala bentuk kerusakan dan pelanggaran hukum disebabkan oleh kelalaian penyewa, bukan merupakan tanggung jawab Perintis Adventure. Penyewa Wajib Menyelesaikan/mengganti Penuh.</string>
    <string name="eleven">Pengembalian uang 50% dari total pembayaran jika terjadi pembatalan.</string>
    <string name="twelve">Pembatalan penyewaan minimal 3 hari sebelum hari penyewaan. Jika lebih dari 3 hari dari hari penyewaan maka uang akan hangus.</string>
    <string name="thirdteen">Biaya keterlambatan pengembalian kendaraan:</string>
    <string name="thirdteennone">- Avanza, Agya, Brio Rp. 30.000/Jam</string>
    <string name="thirdteentwo">- Wuling Rp. 35.000/Jam</string>
    <string name="thirdteenthree">- Innova Rp. 40.000/Jam</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="__5">5.</string>
    <string name="_6">6.</string>
    <string name="_7">7.</string>
    <string name="_8">8.</string>
    <string name="_9">9.</string>
    <string name="_10">10.</string>
    <string name="_11">11.</string>
    <string name="syarat_penyewaan">Syarat Penyewaan</string>
    <string name="jaminan_2_ktp_atau_1_ktp_dan_1_ktm">Jaminan 2 KTP atau 1 KTP dan 1 KTM</string>
    <string name="jaminan_motor_dan_stnk">Jaminan Motor dan STNK</string>
    <string name="uang_dp_50_atau_lunas">Uang DP 50% atau Lunas</string>
    <string name="bensin_harus_kembali_seperti_keadaan_semula">Bensin harus kembali seperti keadaan semula</string>
    <string name="sewa_perhari_dihitung_dalam_waktu_24_jam">Sewa perhari dihitung dalam waktu 24 jam</string>
    <string name="driver_beroperasi_mulai_jam_07_00_22_00">Driver beroperasi mulai jam 07.00 - 22.00</string>
    <string name="aturan_rental">Aturan Rental</string>
    <string name="dapat_mengendarai_mobil">Dapat mengendarai mobil</string>
    <string name="memiliki_sim_a">Memiliki SIM A</string>
    <string name="memiliki_ktp_atau_ktm">Memiliki KTP atau KTM</string>
    <string name="down_payment_dp">Down Payment/DP:</string>
    <string name="_12">12.</string>
    <string name="_13">13.</string>
    <string name="ilustration_empty">ilustration_empty</string>
    <string name="empty_car">Empty Car</string>
    <string name="empty_tour">Empty Tour</string>


</resources>
