<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.azhara.perintisadventure.ui.home.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_booked"
        android:name="com.azhara.perintisadventure.ui.home.ui.pesanan.BookedFragment"
        android:label="@string/booked"
        tools:layout="@layout/fragment_booked" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.azhara.perintisadventure.ui.home.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
