<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.auth.fragment.register.SuccessRegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSecondaryBold"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:text="@string/registrasi_berhasil"
        android:layout_marginTop="60dp"/>

    <ImageView
        android:layout_width="229dp"
        android:layout_height="218dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/ilustrasi_email_terkirim"
        android:src="@drawable/ic_registersuccess" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="67dp"
        android:textAlignment="center"
        style="@style/TextPrimary"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:lineSpacingExtra="4dp"
        android:text="@string/selamat_registrasi_berhasil_silahkan_login_sekarang"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/btn_register_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jelajahi"
        android:layout_marginTop="60dp"
        style="@style/ButtonPrimary"
        android:layout_marginHorizontal="73dp"/>

</LinearLayout>