<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragment.resetpassword.ResetPasswordFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextSecondaryBold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:text="@string/reset_password"
            android:layout_marginTop="60dp" />

        <ImageView
            android:layout_width="317dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/ilustrasi_reset_password"
            android:src="@drawable/ilustration_reset_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:textAlignment="center"
            style="@style/TextPrimary"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:text="@string/masukkan_email_yang_anda_gunakan_pada_akun_anda"
            android:layout_marginTop="35dp" />

        <EditText
            android:id="@+id/edt_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:hint="@string/email"
            android:paddingVertical="14dp"
            android:paddingHorizontal="24dp"
            style="@style/EditTextStyle"
            android:inputType="textEmailAddress"
            android:layout_marginTop="30dp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_reset_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/colorRed"
            android:visibility="invisible"
            style="@style/TextPrimary"
            android:layout_marginTop="16dp"
            android:text="Pengiriman Link Gagal!" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_marginTop="16dp"
            style="@style/ButtonPrimary"
            android:layout_marginHorizontal="73dp" />
    </LinearLayout>

    <View
        android:id="@+id/loading_background_reset_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:background="@drawable/background_loading"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_reset_password"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="invisible"
        android:layout_gravity="center"
        app:lottie_rawRes="@raw/loading"
        app:lottie_loop="true"/>

</FrameLayout>