<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.profile.ChangePasswordFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_change_password"
            style="@style/TextPrimaryBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ganti_password"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edt_old_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_lama"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_change_password" />

        <EditText
            android:id="@+id/edt_new_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_baru"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_old_password" />

        <EditText
            android:id="@+id/edt_confirm_new_password"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:hint="@string/konfirmasi_password_baru"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_new_password" />

        <Button
            android:id="@+id/btn_save_change_password"
            style="@style/ButtonPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="46dp"
            android:layout_marginTop="60dp"
            android:text="@string/simpan"
            app:layout_constraintTop_toBottomOf="@+id/edt_confirm_new_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/loading_background_change_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_loading"
        android:visibility="invisible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_change_password"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:visibility="invisible"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</FrameLayout>